--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,24 +1,22 @@
-name: CI
-on: [push]
-jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+name: Deploy
 
-      - name: Setup Node.js
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 8
         uses: actions/setup-node@v4
         with:
-          node-version: 10
-
-      - name: Install dependencies
+          node-version: '8'
+      - name: Fix v8flags for Node 8
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libgconf-2-4 libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-          npm install cypress
-          npx cypress install
-
-      - name: Run Cypress tests
-        run: npx cypress run
+          mkdir -p ~/.cache/v8flags
+      - run: npm install
+      - run: npm run deploy
 
