--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,22 +1,34 @@
-name: Deploy
+name: Node.js CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18, 20, 22]
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js 8
-        uses: actions/setup-node@v4
-        with:
-          node-version: '8'
-      - name: Fix v8flags for Node 8
-        run: |
-          mkdir -p ~/.cache/v8flags
-      - run: npm install
-      - run: npm run deploy
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+
+    - run: npm install
+    - run: npm test
+
+    - name: Coveralls
+      if: success()
+      run: npm run coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COVERALLS_SERVICE_NAME: github
 
