--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,29 +9,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
-      fail-fast: false
       matrix:
-        node-version: ["20", "19", "18", "17", "16", "15", "14", "13", "12", "11", "10", "8"]
-        arch: [amd64, ppc64le]
-    
+        node-version: [10.x, 12.x]
+
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        if: matrix.arch == 'ppc64le'
-        uses: docker/setup-qemu-action@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
 
-      - name: Run tests in Container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ${{ matrix.arch == 'ppc64le' && 'ppc64le/' || '' }}node:${{ matrix.node-version }}-slim
-          options: -v ${{ github.workspace }}:/src -w /src
-          run: |
-            # Ensure build tools are present for native modules (common cause of 'nan' errors)
-            if [ "${{ matrix.arch }}" = "ppc64le" ]; then
-              apt-get update && apt-get install -y python3 make g++ gcc
-            fi
-            npm install
-            npm test
+    - run: npm install
+    - run: npm install nan
+    - run: npm test
+
+    - name: Coveralls
+      if: success()
+      run: |
+        npm install -g nyc coveralls
+        npx nyc report --reporter=text-lcov > lcov.info
+        cat lcov.info | coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COVERALLS_SERVICE_NAME: github
 
