--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,44 +2,51 @@ name: CI
 
 on:
   push:
-    branches: [ main, main ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, main ]
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
-
-    env:
-      NUMPY_VERSION: stable
-      ASTROPY_VERSION: stable
-      SETUP_CMD: test
-      PIP_DEPENDENCIES: ''
-      CONDA_DEPENDENCIES: 'scipy pytest-cov'
-      CC_TEST_REPORTER_ID: 3b872f454e56a7bae149bd9ec6b24c83e6d5856ce08035a8c2e739e67c410d70
+        include:
+          - python-version: "3.8"
+            toxenv: cover
+          - python-version: "3.8"
+            toxenv: black
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          auto-update-conda: true
-          auto-activate-base: false
-          activate-environment: test
 
-      - name: Install ci-helpers
-        shell: bash -el {0}
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+
+      - name: Install dependencies
         run: |
-          git clone https://github.com/astropy/ci-helpers.git
-          source ci-helpers/travis/setup_conda_linux.sh
+          npm i -g elm
+          python -m pip install --upgrade pip
+          pip install tox tox-gh-actions coveralls
 
-      - name: Run tests
-        shell: bash -el {0}
-        run: py.test
+      - name: Run tox
+        run: tox
+        env:
+          TOXENV: ${{ matrix.toxenv }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_SERVICE_NAME: github
+
+      - name: Upload Coverage
+        if: success() && matrix.toxenv == 'cover'
+        run: coveralls
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_SERVICE_NAME: github
 
