--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,31 +1,40 @@
-name: Python Package
+name: Python CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main, main ]
+  pull_request:
+    branches: [ main, main ]
 
 jobs:
   build:
+    name: Python 3.10 on Linux
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-          
+          python-version: "3.10"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # Ensure all required plugins and compatibility fixes are present
-          pip install mock pytest-mock pytest-pep8 "pytest>=7.4"
-          # Install requirements while bypassing the conflicting pytest-pythonpath
-          pip install -r requirements-dev.txt --exclude-editable pytest-pythonpath || true
-          pip uninstall -y pytest-pythonpath
-          
-      - name: Run tests
-        run: py.test -v
+          pip install -r requirements.txt || pip install .
+
+      - name: Run lint and tests
+        run: |
+          pip install flake8 pytest pytest-cov
+          flake8 --ignore=E501,W503
+          pytest -v --cov-report=xml --cov=src/sdialog
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
