--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,40 +1,60 @@
-name: Python CI
+name: Python Package CI
 
-on:
-  push:
-    branches: [ main, main ]
-  pull_request:
-    branches: [ main, main ]
+on: [push, pull_request]
 
 jobs:
-  build:
-    name: Python 3.10 on Linux
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.9', '3.10']
+    
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_HOST_AUTH_METHOD: trust
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DJANGO_VERSION: 3.2.23
+      PGHOST: localhost
+      PGUSER: postgres
+      POSTGRES_USER: postgres
+      PGPASSWORD: password
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || pip install .
+          pip install .
+          pip install django==$DJANGO_VERSION
+          pip install psycopg2-binary
+          python setup.py -q install
 
-      - name: Run lint and tests
+      - name: Setup Database
         run: |
-          pip install flake8 pytest pytest-cov
-          flake8 --ignore=E501,W503
-          pytest -v --cov-report=xml --cov=src/sdialog
+          psql -c 'create database test;'
+          psql -d test -c 'create extension if not exists cube;'
+          psql -d test -c 'create extension if not exists earthdistance;'
+          psql -d postgres -c 'create extension if not exists cube;'
+          psql -d postgres -c 'create extension if not exists earthdistance;'
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: true
-          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Run tests
+        run: python runtests.py
 
